temporal-verifier/tests/examples/snapshots/success/immutability.fly.cvc5.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--all-solvers -- verify tests/examples/success/immutability.fly"
expression: combined_stdout_stderr
---
verifies!

======== STDERR: ===========

