temporal-verifier/tests/examples/snapshots/success/immutability.fly.houdini.1.cvc5.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--all-solvers --name=houdini.1 -- infer houdini tests/examples/success/immutability.fly"
expression: combined_stdout_stderr
---
# inferred invariant:
assert always r
proof {
  invariant r
}
verifies!

======== STDERR: ===========

