temporal-verifier/tests/examples/snapshots/success/safety1_proof_invariants.fly.cvc4.snap
---
source: tests/test_examples.rs
description: "--all-solvers -- verify tests/examples/success/safety1_proof_invariants.fly"
expression: combined_stdout_stderr
---
verifies!

======== STDERR: ===========

