temporal-verifier/tests/examples/snapshots/success/safety1_proof_invariants.fly.houdini.1.cvc5.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--all-solvers --name=houdini.1 -- infer houdini tests/examples/success/safety1_proof_invariants.fly"
expression: combined_stdout_stderr
---
# inferred invariant:
assert always !p
proof {
  invariant !p
  invariant !p
  invariant !q
}
verifies!

======== STDERR: ===========

