temporal-verifier/tests/examples/snapshots/success/safety2.fly.houdini.1.cvc4.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--all-solvers --name=houdini.1 -- infer houdini tests/examples/success/safety2.fly"
expression: combined_stdout_stderr
---
# inferred invariant:
assert always x
proof {
  invariant x
  invariant y
  invariant z
}
verifies!

======== STDERR: ===========

