temporal-verifier/tests/examples/snapshots/success/safety2.fly.z3.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--all-solvers -- verify tests/examples/success/safety2.fly"
expression: combined_stdout_stderr
---
verifies!

======== STDERR: ===========

