temporal-verifier/tests/examples/snapshots/success/safety3.fly.cvc5.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--all-solvers -- verify tests/examples/success/safety3.fly"
expression: combined_stdout_stderr
---
verifies!

======== STDERR: ===========

